[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/MSG_System/scripts/MSG_Bubble.gd" type="Script" id=1]
[ext_resource path="res://addons/MSG_System/img/window_triangle_2.png" type="Texture" id=2]
[ext_resource path="res://addons/MSG_System/img/window.png" type="Texture" id=3]
[ext_resource path="res://addons/MSG_System/fonts/font_normal.tres" type="DynamicFont" id=4]
[ext_resource path="res://addons/MSG_System/sfx/dialogue_sound.wav" type="AudioStream" id=5]
[ext_resource path="res://addons/MSG_System/fonts/font_bold.tres" type="DynamicFont" id=6]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="CanvasItemMaterial" id=2]

[sub_resource type="Animation" id=3]
resource_name = "def"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[node name="MSG_Bubble" type="Node2D" groups=[
"MSG_Bubble",
]]
pause_mode = 2
z_index = 100
script = ExtResource( 1 )

[node name="main" type="Control" parent="."]

[node name="message_triangle" type="TextureRect" parent="main"]
modulate = Color( 0.203922, 0.223529, 0.309804, 1 )
margin_left = -13.0
margin_top = -2.0
margin_right = 22.0
margin_bottom = 28.0
texture = ExtResource( 2 )
stretch_mode = 5

[node name="NinePatchRect" type="NinePatchRect" parent="main"]
modulate = Color( 0.203922, 0.223529, 0.309804, 1 )
material = SubResource( 1 )
margin_left = -90.0
margin_right = 90.0
margin_bottom = 48.0
rect_min_size = Vector2( 18, 0 )
texture = ExtResource( 3 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="label" type="Label" parent="main"]
material = SubResource( 2 )
margin_left = -173.2
margin_top = 1.0
margin_right = 126.8
margin_bottom = 46.0
rect_min_size = Vector2( 64, 18 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 4 )
text = "Hello"
align = 1

[node name="characters_timer" type="Timer" parent="."]
wait_time = 0.04

[node name="SFX_Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -35.0
mix_target = 2

[node name="_continue" type="Label" parent="."]
editor/display_folded = true
margin_left = -14.1411
margin_top = -45.1566
margin_right = 25.8589
margin_bottom = 47.8434
custom_fonts/font = ExtResource( 6 )
text = "...
"
percent_visible = 0.666667

[node name="AnimationPlayer" type="AnimationPlayer" parent="_continue"]
autoplay = "def"
playback_speed = 0.4
anims/def = SubResource( 3 )

[connection signal="timeout" from="characters_timer" to="." method="_on_characters_timer_timeout"]
[connection signal="timeout" from="SFX_Timer" to="." method="_on_SFX_Timer_timeout"]
